--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
-    "type": "git",
-    "url": "git+https://github.com/zhanglongdream/vue-plun.git"
+    "type": "https",
+    "url": "https://github.com/zhanglongdream/vue-plun/tree/vue-message"
   }, 
   "keywords": [
     "vue",
@@ -18,7 +18,7 @@
   "author": "zhanglongdream",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/zhanglongdream/iosSelect/issues"
+    "url": "https://github.com/zhanglongdream/vue-plun/issues/1"
   },
-  "homepage": "https://github.com/zhanglongdream/iosSelect#readme"
+  "homepage": "https://github.com/zhanglongdream/vue-plun#readme"
 }
